TheKabal (4 May 2014)
--------------------------------------
May the fourth be with you!
Extended the language and gameconfig schemas to allow types to be stored with variables
Expanded BntFile to include a better ini parser, which pulls in the variable types along with the variables

TheKabal (3 May 2014)
--------------------------------------
Create "Bad" ibank class, to note that it is not our intended style for classes, and needs to be fixed in the future.
Migrate bad ibank functions from includes to the classes directory
Create "Bad" xenobe class
Migrate xenobe functions from includes to the classes directory
Create "Bad" planet class
Migrate planet_ functions from includes to the classes directory
Create "Bad" traderoute class
Migrate traderoute functions from includes to the classes directory
Update copyright notices
Switch to using password_hash for password checks
Expand players password field to accomodate potential future larger hashed size passwords

TheKabal (27 April 2014)
--------------------------------------
Goodbye adodb's xml schema, hello SQL schema, add support for persistent tables

TheMightyDude (02 April 2014)
--------------------------------------
Fixed bug in port.php when paying bounty back from your IGB Bank which resulted in no url link back to port.php.

TheKabal (23 February 2014)
--------------------------------------
Remove Symfony/Doctrine DBAL, add support for PDO, including converting footer, common, and the first step in create universe
Add note about old versions of PHP, and the security risk they bring

TheMightyDude (31 January 2014)
--------------------------------------
Added IGB Terminal access via Command Menu. (requested feature)

TheKabal (26 January 2014)
--------------------------------------
Update composer, htmlpurifier, and switch to PSR-4 autoloading
Add minimal connection support for DBAL to begin developing in that direction

TheKabal (2 December 2013)
--------------------------------------