@@ -25,8 +25,8 @@
 
 [MAIN]
 game_name                  = 'Default Game Name';              // Please set this to a unique name for your game
-server_closed              = 0;                                // True / 1 = block logins but not new account creation
-account_creation_closed    = 0;                                // True / 1 = block new account creation
+server_closed              = false;                            // True = block logins but not new account creation
+account_creation_closed    = false;                            // True = block new account creation
 release_version            = '0.7';                            // Please do not change this. Doing so will cause problems for the server lists, and setupinfo, and more.
 
 [MAIL_SYSTEM_SETTINGS]
@@ -49,12 +49,12 @@ doomsday_value             = 90000000;                         // Number of colo
 max_turns                  = 2500;                             // The maximum number of turns a player can receive
 
 [OPTIONAL_FEATURES]
-allow_fullscan             = 1;                                // Allow players to use full long range scan during this game?
-allow_navcomp              = 1;                                // Allow players to use the Navigation computer during this game?
-allow_ibank                = 1;                                // Allow players to use the Intergalactic Bank IGB during this game?
-allow_genesis_destroy      = 0;                                // Allow players to use genesis torps to destroy planets?
-allow_sofa                 = 0;                                // Is the sub-orbital fighter sofa attack allowed in this game?
-allow_ksm                  = 1;                                // Is the known space map allowed in this game?
+allow_fullscan             = true;                             // Allow players to use full long range scan during this game?
+allow_navcomp              = true;                             // Allow players to use the Navigation computer during this game?
+allow_ibank                = true;                             // Allow players to use the Intergalactic Bank IGB during this game?
+allow_genesis_destroy      = false;                            // Allow players to use genesis torps to destroy planets?
+allow_sofa                 = false;                            // Allow the sub-orbital fighter sofa attack in this game?
+allow_ksm                  = true;                             // Allow the known space map in this game?
 
 [STARTING_VALUES]
 start_fighters             = 10;                               // The amount of fighters on the ship the player starts with
@@ -205,7 +205,7 @@ max_planets_sector         = 5;                                // The maximum nu
 max_traderoutes_player     = 40;                               // The maximum number of saved traderoutes a player can have
 min_bases_to_own           = 3;                                // The minimum number of planets with bases in a sector that a player needs to have to take ownership of the zone
 default_lang               = 'english';                        // The default language the game displays in until a player chooses a language
-corp_planet_transfers      = 0;                                // If transferring credits to/from corp planets is allowed. 1=enable
+corp_planet_transfers      = false;                            // If transferring credits to/from corp planets is allowed.
 min_value_capture          = 0;                                // Percantage of planet's value a ship must be worth to be able to capture it. 0=disable
 defence_degrade_rate       = '0.05';                           // The percentage rate at which defenses fits, mines degrade during scheduler runs
 energy_per_fighter         = '0.10';                           // The amount of energy needed from planets in sector to maintain a fighter during scheduler runs
@@ -213,18 +213,18 @@ space_plague_kills         = '0.20';                           // Percentage of 
 max_credits_without_base   = 10000000;                         // Max amount of credits allowed on a planet without a base
 port_regenrate             = 10;                               // The amount of units regenerated by ports during a scheduler tick
 footer_style               = 'old';                            // Switch between old style footer and new style. Old is text, and only the time until next update. New is a table including server time.
-footer_show_debug          = 1;                                // Should the footer show the memory and time to generate page?
-sched_planet_valid_credits = 1;                                // Limit captured planets Max Credits to max_credits_without_base
+footer_show_debug          = true;                             // Should the footer show the memory and time to generate page?
+sched_planet_valid_credits = true;                             // Limit captured planets Max Credits to max_credits_without_base
 max_upgrades_devices       = 55;                               // Must stay at 55 due to PHP/MySQL cap limit.
 max_emerwarp               = 10;                               // The maximum number of emergency warp devices a player can have at one time
 max_genesis                = 10;                               // The maximum number of genesis devices a player can have at one time
 max_beacons                = 10;                               // The maximum number of beacons a player can have at one time
 max_warpedit               = 10;                               // The maximum number of warpeditors a player can have at one time
-bounty_all_special         = 1;                                // Stop access on all Special Ports when you have a federation bounty on you.
-bnt_ls                     = 0;                                // Should the game register with the list server? currently not functional
-link_forums                = 'forums.blacknova.net';    // Address for the forum link
+bounty_all_special         = true;                             // Stop access on all Special Ports when you have a federation bounty on you.
+bnt_ls                     = false;                            // True if you'd like to publish your game on the public server list
+link_forums                = 'forums.blacknova.net';           // Address for the forum link
 admin_name                 = 'Game Admin';                     // The title for the administrator
 admin_ship_name            = "Game Admin's ship";              // The title for the administrators ship
 admin_zone_name            = "Game Admin's zone";              // The title for the administrators zone
-enable_gravatars           = 0;                                // True / 1 if you'd like to enable gravatars for players
+enable_gravatars           = false;                            // True if you'd like to enable gravatars for players
 default_template           = 'classic';                        // Used for players and the admin until/unless they choose another
